--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_ESSJ/ES_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_ESSJ/ES_SJSM_ESSJ.cshtml
@@ -85,14 +85,15 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_gq_sjzr">
-                        <img class="img_radio" id="img_gq_sjzr" /><label class="label_radio">商家转让</label>
+                        <img class="img_radio" id="img_gq_sjzr"/><label class="label_radio">商家转让</label>
                     </div>
                     <div class="div_radio" id="div_gq_sjhs">
-                        <img class="img_radio" id="img_gq_sjhs" /><label class="label_radio">商家回收</label>
+                        <img class="img_radio" id="img_gq_sjhs"/><label class="label_radio">商家回收</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
-            <div id="divSJLB" class="div_row" style="z-index: 999">
+            <div id="divSJPPYXH" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 60px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">手机品牌与型号</span>
@@ -100,6 +101,7 @@
                 <div class="div_row_right">
                     <div id="divSJPPText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div id="divSJPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                            <input id="PPID" type="hidden"/>
                             <span id="spanSJPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -114,7 +116,7 @@
                         <div id="divSJXH" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSJXHTip" class="Warn" style="z-index: 996; position: relative;"></div>
+                    <div id="divSJPPYXHTip" class="Warn" style="z-index: 996; position: relative;"></div>
                 </div>
             </div>
             <div id="divSYQK" class="div_row">
@@ -124,12 +126,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_syqk_syg">
-                        <img class="img_radio" id="img_syqk_syg" /><label class="label_radio">使用过</label>
+                        <img class="img_radio" id="img_syqk_syg"/><label class="label_radio">使用过</label>
                     </div>
                     <div class="div_radio" id="div_syqk_qxwcf">
-                        <img class="img_radio" id="img_syqk_qxwcf" /><label class="label_radio">全新未拆封</label>
+                        <img class="img_radio" id="img_syqk_qxwcf"/><label class="label_radio">全新未拆封</label>
                     </div>
                 </div>
+                <div id="divSYQKTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 994;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -144,7 +147,7 @@
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
-            <div id="divJYDD" class="div_row" style="z-index: 997;">
+            <div id="divSZQY" class="div_row" style="z-index: 997;">
                 <div class="div_row_left" style="margin-left: 102px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
