--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_PBDN/ES_SJSM_PBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_PBDN/ES_SJSM_PBDN.cshtml
@@ -85,12 +85,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_gq_sjzr">
-                        <img class="img_radio" id="img_gq_sjzr" /><label class="label_radio">商家转让</label>
+                        <img class="img_radio" id="img_gq_sjzr"/><label class="label_radio">商家转让</label>
                     </div>
                     <div class="div_radio" id="div_gq_sjhs">
-                        <img class="img_radio" id="img_gq_sjhs" /><label class="label_radio">商家回收</label>
+                        <img class="img_radio" id="img_gq_sjhs"/><label class="label_radio">商家回收</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divPBLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -108,7 +109,7 @@
                     </div>
                     <div id="divPBPPText" class="div_select_out SRK" style="position: relative;">
                         <div id="divPBPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="PPID" />
+                            <input type="hidden" id="PPID"/>
                             <span id="spanPBPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -132,6 +133,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divPBLBTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divXJCD" class="div_row" style="z-index: 996">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -148,6 +150,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divXJCDTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 995">
                 <div class="div_row_left" style="margin-left: 102px;">
@@ -156,13 +159,13 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
                         <span class="spaninput_fontcolor">元</span>
                     </span>
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
-            <div id="divDD" class="div_row" style="z-index: 994;">
+            <div id="divSZQY" class="div_row" style="z-index: 994;">
                 <div class="div_row_left" style="margin-left: 102px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
@@ -170,7 +173,7 @@
                 <div class="div_row_right">
                     <div id="divQYText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -186,6 +189,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSZQYTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
