--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_TSJ/ES_SJSM_TSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_TSJ/ES_SJSM_TSJ.cshtml
@@ -85,14 +85,15 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_gq_sjzr">
-                        <img class="img_radio" id="img_gq_sjzr" /><label class="label_radio">商家转让</label>
+                        <img class="img_radio" id="img_gq_sjzr"/><label class="label_radio">商家转让</label>
                     </div>
                     <div class="div_radio" id="div_gq_sjhs">
-                        <img class="img_radio" id="img_gq_sjhs" /><label class="label_radio">商家回收</label>
+                        <img class="img_radio" id="img_gq_sjhs"/><label class="label_radio">商家回收</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
-            <div id="divPBLB" class="div_row" style="z-index: 999">
+            <div id="divTSJLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -115,6 +116,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divTSJLBTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divTSJXXCS" class="div_row" style="z-index: 998; display: none;">
                 <div class="div_row_left" style="margin-left: 100px;">
@@ -195,6 +197,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divXJCDTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 995">
                 <div class="div_row_left" style="margin-left: 102px;">
@@ -203,13 +206,13 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
                         <span class="spaninput_fontcolor">元</span>
                     </span>
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
-            <div id="divDD" class="div_row" style="z-index: 994;">
+            <div id="divXZQY" class="div_row" style="z-index: 994;">
                 <div class="div_row_left" style="margin-left: 102px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
@@ -217,7 +220,7 @@
                 <div class="div_row_right">
                     <div id="divQYText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -233,6 +236,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSZQYTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
