--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_MYFZMR_FZXMXB/ES_MYFZMR_FZXMXB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_MYFZMR_FZXMXB/ES_MYFZMR_FZXMXB.cshtml
@@ -85,14 +85,15 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_sf_grzr">
-                        <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人转让</label>
+                        <img class="img_radio" id="img_sf_grzr"/><label class="label_radio">个人转让</label>
                     </div>
                     <div class="div_radio" id="div_sf_sjzr">
-                        <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家转让</label>
+                        <img class="img_radio" id="img_sf_sjzr"/><label class="label_radio">商家转让</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
-            <div id="divJDLB" class="div_row" style="z-index: 999">
+            <div id="divFZXMXBLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -115,6 +116,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divFZXMXBLBTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divFZXXCS" class="div_row" style="z-index: 998; display: none;">
                 <div class="div_row_left" style="margin-left: 160px;">
@@ -163,6 +165,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divXJCDTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 992;">
                 <div class="div_row_left" style="margin-left: 102px;">
@@ -177,7 +180,7 @@
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divDD" class="div_row" style="z-index: 991;">
+            <div id="divSZQY" class="div_row" style="z-index: 991;">
                 <div class="div_row_left" style="margin-left: 102px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
@@ -185,7 +188,7 @@
                 <div class="div_row_right">
                     <div id="divQYText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -201,6 +204,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSZQYTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
