--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_WHYL_TSYXRJ/ES_WHYL_TSYXRJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_WHYL_TSYXRJ/ES_WHYL_TSYXRJ.cshtml
@@ -86,14 +86,15 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_sf_grzr">
-                        <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人转让</label>
+                        <img class="img_radio" id="img_sf_grzr"/><label class="label_radio">个人转让</label>
                     </div>
                     <div class="div_radio" id="div_sf_sjzr">
-                        <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家转让</label>
+                        <img class="img_radio" id="img_sf_sjzr"/><label class="label_radio">商家转让</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
-            <div id="divJDLB" class="div_row" style="z-index: 999">
+            <div id="divTSYXRJLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -116,6 +117,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divTSYXRJLBTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divXJCD" class="div_row" style="z-index: 993;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -132,6 +134,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divXJCDTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 992;">
                 <div class="div_row_left" style="margin-left: 102px;">
@@ -146,7 +149,7 @@
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divDD" class="div_row" style="z-index: 991;">
+            <div id="divSZQY" class="div_row" style="z-index: 991;">
                 <div class="div_row_left" style="margin-left: 102px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
