--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_MTC/CL_MTC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_MTC/CL_MTC.cshtml
@@ -85,12 +85,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_sf_grzr">
-                        <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人转让</label>
+                        <img class="img_radio" id="img_sf_grzr"/><label class="label_radio">个人转让</label>
                     </div>
                     <div class="div_radio" id="div_sf_sjzr">
-                        <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家转让</label>
+                        <img class="img_radio" id="img_sf_sjzr"/><label class="label_radio">商家转让</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divMTCLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -107,6 +108,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divMTCLBTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divMTCPP" class="div_row" style="z-index: 998">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -123,20 +125,22 @@
                         </div>
                     </div>
                 </div>
+                <div id="divMTCPPTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divXSLC" class="div_row" style="z-index: 997;">
+            <div id="divXSQK" class="div_row" style="z-index: 997;">
                 <div class="div_row_left" style="margin-left: 102px;">
                     <span class="span_required">*</span>
-                    <span class="spanFWCZ">行驶里程</span>
+                    <span class="spanFWCZ">行驶情况</span>
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_xslc_xcwxs">
-                        <img class="img_radio" id="img_xslc_xcwxs" /><label class="label_radio">新车未行使</label>
+                        <img class="img_radio" id="img_xslc_xcwxs"/><label class="label_radio">新车未行使</label>
                     </div>
                     <div class="div_radio" id="div_xslc_yxs">
-                        <img class="img_radio" id="img_xslc_yxs" /><label class="label_radio">已行使</label>
+                        <img class="img_radio" id="img_xslc_yxs"/><label class="label_radio">已行使</label>
                     </div>
                 </div>
+                <div id="divXSQKTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divGLS" class="div_row" style="z-index: 996; display: none;">
                 <div class="div_row_left" style="margin-left: 115px;">
@@ -145,7 +149,7 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanGLS" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="GLS" maxlength="9" column="GLS" type="text" style="width: 80px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="GLS" maxlength="9" column="GLS" type="text" style="width: 100px" />
                         <span class="spaninput_fontcolor">公里</span>
                     </span>
                 </div>
@@ -180,22 +184,22 @@
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
-            <div id="divDD" class="div_row" style="z-index: 992;">
+            <div id="divSZQY" class="div_row" style="z-index: 992;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -204,6 +208,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSZQYSTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
