--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_ZXCDDCSLC/CL_ZXCDDCSLC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_ZXCDDCSLC/CL_ZXCDDCSLC.cshtml
@@ -85,14 +85,15 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_sf_grzr">
-                        <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人转让</label>
+                        <img class="img_radio" id="img_sf_grzr"/><label class="label_radio">个人转让</label>
                     </div>
                     <div class="div_radio" id="div_sf_sjzr">
-                        <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家转让</label>
+                        <img class="img_radio" id="img_sf_sjzr"/><label class="label_radio">商家转让</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divJDLB" class="div_row" style="z-index: 999">
+            <div id="divZXCDDCSLCLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -115,6 +116,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divZXCDDCSLCLBTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divZXCXXCS" class="div_row" style="z-index: 998; display: none;">
                 <div class="div_row_left" style="margin-left: 160px;">
@@ -187,6 +189,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divXJCDTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divSYNX" class="div_row" style="z-index: 992;">
                 <div class="div_row_left" style="margin-left: 102px;">
@@ -195,7 +198,7 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanSYNX" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="SYNX" maxlength="9" column="SYNX" type="text" style="width: 100px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="SYNX" maxlength="9" column="SYNX" type="text" style="width: 120px" />
                         <span class="spaninput_fontcolor">年</span>
                     </span>
                 </div>
@@ -214,22 +217,22 @@
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divDD" class="div_row" style="z-index: 991;">
+            <div id="divSZQY" class="div_row" style="z-index: 991;">
                 <div class="div_row_left" style="margin-left: 102px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -238,6 +241,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSZQYTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
