--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_GCC/CL_GCC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_GCC/CL_GCC.cshtml
@@ -79,22 +79,23 @@
                 <span class="span_split">类别选择</span>
                 <em class="em_split"></em>
             </div>
-            <div id="divLB" class="div_row">
+            <div id="divGCCLB" class="div_row">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_lb_clmm">
-                        <img class="img_radio" id="img_lb_clmm" /><label class="label_radio">车辆买卖</label>
+                        <img class="img_radio" id="img_lb_clmm"/><label class="label_radio">车辆买卖</label>
                     </div>
                     <div class="div_radio" id="div_lb_pj">
-                        <img class="img_radio" id="img_lb_pj" /><label class="label_radio">配件</label>
+                        <img class="img_radio" id="img_lb_pj"/><label class="label_radio">配件</label>
                     </div>
                     <div class="div_radio" id="div_lb_wxby">
-                        <img class="img_radio" id="img_lb_wxby" /><label class="label_radio">维修/保养</label>
+                        <img class="img_radio" id="img_lb_wxby"/><label class="label_radio">维修/保养</label>
                     </div>
                 </div>
+                <div id="divGCCLBTip" class="Warn"></div>
             </div>
             <div id="divJBXX" class="div_split" style="display: block; text-align: left">
                 <span class="span_split">基本信息</span>
@@ -106,15 +107,15 @@
                     <span class="spanFWCZ">车型</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divCXText" class="div_select_out SRK" style="position: relative;">
-                        <div id="divCXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                    <div id="divCXText" class="div_select_out SRK" style="position: relative; z-index: 998;">
+                        <div id="divCXSpan" class="div_select_in" style="border: none; margin-top: 6px; ">
                             <span id="spanCX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择车型</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divCX" class="div_bqss" style="display: none;">
                             <div class="div_bqss_head">
-                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                                <input class="btn btn-info" type="button" value="快速搜索" />
+                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text"/>
+                                <input class="btn btn-info" type="button" value="快速搜索"/>
                             </div>
                             <div class="div_bqss_body">
                                 <div class="div_bqss_body_mc" id="div_content_gccmc">
@@ -125,22 +126,23 @@
                         </div>
                     </div>
                 </div>
+                <div id="divGCCCXTip" class="Warn" style="z-index: 997; position: relative;"></div>
             </div>
-            <div id="divGCCPP" class="div_row" style="z-index: 998; display: none">
+            <div id="divGCCPP" class="div_row" style="z-index: 996; display: none">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">品牌</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divPPText" class="div_select_out SRK" style="position: relative;">
+                    <div id="divPPText" class="div_select_out SRK" style="position: relative; z-index: 995;">
                         <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divPP" class="div_bqss" style="display: none;">
                             <div class="div_bqss_head">
-                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                                <input class="btn btn-info" type="button" value="快速搜索" />
+                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text"/>
+                                <input class="btn btn-info" type="button" value="快速搜索"/>
                             </div>
                             <div class="div_bqss_body">
                                 <div class="div_bqss_body_mc" id="div_bqss_body_mc">
@@ -151,8 +153,9 @@
                         </div>
                     </div>
                 </div>
+                <div id="divGCCPPTip" class="Warn" style="z-index: 994; position: relative;"></div>
             </div>
-            <div id="divDW" class="div_row" style="z-index: 995;">
+            <div id="divDW" class="div_row" style="z-index: 993;">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">吨位</span>
@@ -163,9 +166,9 @@
                         <span class="spaninput_fontcolor" style="margin-left: 15px;">吨</span>
                     </span>
                 </div>
-                <div id="divDWTip" class="Warn" style="z-index: 994; position: relative;"></div>
+                <div id="divDWTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divXSS" class="div_row" style="z-index: 995;">
+            <div id="divXSS" class="div_row" style="z-index: 991;">
                 <div class="div_row_left" style="margin-left: 114px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">小时数</span>
@@ -176,9 +179,9 @@
                         <span class="spaninput_fontcolor">小时</span>
                     </span>
                 </div>
-                <div id="divXSSTip" class="Warn" style="z-index: 994; position: relative;"></div>
+                <div id="divXSSTip" class="Warn" style="z-index: 990; position: relative;"></div>
             </div>
-            <div id="divGCCCCNX" class="div_row" style="z-index: 997;">
+            <div id="divGCCCCNX" class="div_row" style="z-index: 989;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">出厂年限</span>
@@ -201,36 +204,37 @@
                         </div>
                     </div>
                 </div>
+                <div id="divGCCCCNXTip" class="Warn" style="z-index: 988; position: relative;"></div>
             </div>
-            <div id="divJG" class="div_row" style="z-index: 995;">
+            <div id="divJG" class="div_row" style="z-index: 987;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">转让价格</span>
                 </div>
                 <div class="div_row_right">
                     <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
                         <span class="spaninput_fontcolor">万元</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 994; position: relative;"></div>
+                <div id="divJGTip" class="Warn" style="z-index: 986; position: relative;"></div>
             </div>
-            <div id="divDD" class="div_row" style="z-index: 993;">
+            <div id="divSZQY" class="div_row" style="z-index: 985;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -239,6 +243,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSZQYTip" class="Warn" style="z-index: 984; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
