--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_MTC/CL_MTC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_MTC/CL_MTC.cshtml
@@ -170,6 +170,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divMTCGCSJTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 993;">
                 <div class="div_row_left" style="margin-left: 101px;">
