--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_HC/CL_HC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_HC/CL_HC.cshtml
@@ -96,22 +96,23 @@
                         </div>
                     </div>
                 </div>
+                <div id="divHCLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
-            <div id="divHCPP" class="div_row" style="z-index: 998">
+            <div id="divHCPP" class="div_row" style="z-index: 997">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">品牌</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divPPText" class="div_select_out SRK" style="position: relative;">
+                    <div id="divPPText" class="div_select_out SRK" style="position: relative; z-index: 997">
                         <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divPP" class="div_bqss" style="display: none;">
                             <div class="div_bqss_head">
-                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                                <input class="btn btn-info" type="button" value="快速搜索" />
+                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text"/>
+                                <input class="btn btn-info" type="button" value="快速搜索"/>
                             </div>
                             <div class="div_bqss_body">
                                 <div class="div_bqss_body_mc" id="div_bqss_body_mc">
@@ -122,8 +123,9 @@
                         </div>
                     </div>
                 </div>
+                <div id="divHCPPTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
-            <div id="divHCCCNX" class="div_row" style="z-index: 997;">
+            <div id="divHCCCNX" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">出厂年限</span>
@@ -146,8 +148,9 @@
                         </div>
                     </div>
                 </div>
+                <div id="divHCCCNXTip" class="Warn" style="z-index: 994; position: relative;"></div>
             </div>
-            <div id="divEDZZ" class="div_row" style="z-index: 995;">
+            <div id="divEDZZ" class="div_row" style="z-index: 993;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">额定载重</span>
@@ -158,9 +161,9 @@
                         <span class="spaninput_fontcolor">吨</span>
                     </span>
                 </div>
-                <div id="divEDZZTip" class="Warn" style="z-index: 994; position: relative;"></div>
+                <div id="divEDZZTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divXSLC" class="div_row" style="z-index: 995;">
+            <div id="divXSLC" class="div_row" style="z-index: 991;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">行驶里程</span>
@@ -171,37 +174,37 @@
                         <span class="spaninput_fontcolor">万公里</span>
                     </span>
                 </div>
-                <div id="divXSLCTip" class="Warn" style="z-index: 994; position: relative;"></div>
+                <div id="divXSLCTip" class="Warn" style="z-index: 990; position: relative;"></div>
             </div>
-            <div id="divJG" class="div_row" style="z-index: 995;">
+            <div id="divJG" class="div_row" style="z-index: 989;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">转让价格</span>
                 </div>
                 <div class="div_row_right">
                     <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
                         <span class="spaninput_fontcolor">万元</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 994; position: relative;"></div>
+                <div id="divJGTip" class="Warn" style="z-index: 988; position: relative;"></div>
             </div>
-            <div id="divDD" class="div_row" style="z-index: 993;">
+            <div id="divSZQY" class="div_row" style="z-index: 987;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -210,6 +213,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSZQYTip" class="Warn" style="z-index: 986; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
@@ -225,7 +229,7 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divBCMS" class="div_row" style="height: 253px;">
+            <div id="divBCMS" class="div_row" style="height: 253px; z-index: 985;">
                 <div class="div_row_left" style="height: 170px; vertical-align: top;">
                     <span class="span_required" style="vertical-align: top">*</span>
                     <span id="spanBCMS" style="vertical-align: top">补充描述</span>
@@ -279,7 +283,7 @@
                     <span id="spanLXDH">联系人</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="LXR" column="LXR" class="span_spaninput input_input SRK" type="text" placeholder="请输入联系人" />
+                    <input id="LXR" column="LXR" class="input_input SRK" type="text" placeholder="请输入联系人" />
                     <div id="divLXRTip"></div>
                 </div>
             </div>
@@ -289,7 +293,7 @@
                     <span id="spanLXDH">联系电话</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="LXDH" maxlength="11" column="LXDH" class="span_spaninput input_input SRK" type="text" placeholder="请输入联系电话" />
+                    <input id="LXDH" maxlength="11" column="LXDH" class="input_input SRK" type="text" placeholder="请输入联系电话" />
                     <div id="divLXDHTip"></div>
                 </div>
             </div>
