--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="divCXText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 998; display: none; position: relative;">
+                    <div id="divCXText" class="div_select_out SRK" style="z-index: 998;">
                         <div id="divCXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanCX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择车系</span>
                             <div class="span_select_arrow"></div>
