--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
@@ -143,7 +143,7 @@
                 </div>
                 <div class="div_row_right" id="div_clys_right2">
                 </div>
-                <div id="divCLYS2Tip" class="Warn" style="z-index: 994; position: relative;"></div>
+                <div id="divCLYSTip" class="Warn" style="z-index: 994; position: relative;"></div>
             </div>
             <div id="divSCSPSJ" class="div_row" style="z-index: 993;">
                 <div class="div_row_left" style="margin-left: 72px;">
