--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWG/CW_CWG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWG/CW_CWG.cshtml
@@ -85,12 +85,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_sf_grzr">
-                        <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人转让</label>
+                        <img class="img_radio" id="img_sf_grzr"/><label class="label_radio">个人转让</label>
                     </div>
                     <div class="div_radio" id="div_sf_sjzr">
-                        <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家转让</label>
+                        <img class="img_radio" id="img_sf_sjzr"/><label class="label_radio">商家转让</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divCWGPZ" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -105,8 +106,8 @@
                         </div>
                         <div id="divPZ" class="div_bqss" style="display: none;">
                             <div class="div_bqss_head">
-                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                                <input class="btn btn-info" type="button" value="快速搜索" />
+                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text"/>
+                                <input class="btn btn-info" type="button" value="快速搜索"/>
                             </div>
                             <div class="div_bqss_body">
                                 <div class="div_bqss_body_mc" id="div_content_cwgmc">
@@ -117,6 +118,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divCWGPZTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 998;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -125,7 +127,7 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
                         <span class="spaninput_fontcolor">元/只</span>
                     </span>
                 </div>
